--- a/views/header copy.html
+++ b/views/header copy.html
@@ -123,19 +123,15 @@
 
 </svg>
 
-<main class="d-flex flex-nowrap bg-black" style="height: 100vh;">
-
+<main class="d-flex flex-nowrap">
+  <h1 class="visually-hidden">Sidebars examples</h1>
   <!-- col-lg-8 mx-auto p-4 py-md-5 
   d-flex flex-column flex-shrink-0 p-4 text-bg-dark
 -->
 
 
-
-  <div class="col-md-2 d-md-block">
-
-  </div>
-
-  <div class="col-2 d-flex flex-column flex-shrink-0 p-4">
+<div class="d-flex justify-content-start"></div>
+  <div class="col-2 d-flex flex-column flex-shrink-0 p-4 text-bg-dark" style="width: 280px;">
     <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-white text-decoration-none">
       <svg class="bi pe-none me-2" width="40" height="32"><use xlink:href="#twitter"/></svg>
       <span class="fs-4"></span>
@@ -194,8 +190,8 @@
     <hr>
     <div class="dropdown">
       <a href="#" class="d-flex align-items-center text-white text-decoration-none dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
-        <img src="" alt="" width="32" height="32" class="rounded-circle me-2">
-        <strong>Batmano</strong>
+        <img src="https://github.com/mdo.png" alt="" width="32" height="32" class="rounded-circle me-2">
+        <strong>mdo</strong>
       </a>
       <ul class="dropdown-menu dropdown-menu-dark text-small shadow">
         <li><a class="dropdown-item" href="#">New project...</a></li>
@@ -206,5 +202,7 @@
       </ul>
     </div>
   </div>
+  <div class="d-flex justify-content-end"></div>
+  
 
 
