--- a/views/index.html
+++ b/views/index.html
@@ -8,8 +8,15 @@
     <button type="submit" class="btn btn-primary" name="enviar" id="enviar" value="enviar">Tweet</button>
   </div>
   </form>
-
-
+  
+  
+  <div class="text-white fs-3 fw-normal bg-dark">
+  {loop="$posts"}
+  <div class="border border-light"><h2>{$value.deslogin}</h2></div>
+  <div class="border border-light"><h2>{$value.tweet}</h2></div>     
+  <div class="border border-light"><h2>{$value.dtregister}</h2></div>
+  {/loop}
+  </div>
 
 
 
