--- a/views/login.html
+++ b/views/login.html
@@ -22,7 +22,7 @@
     
     <!-- Custom CSS -->
     <link rel="stylesheet" href="/res/site/css/owl.carousel.css">
-    <link type="text/css" rel="stylesheet" href="/res/site/css/style.css">
+    <link type="text/css" rel="stylesheet" href="/res/site/css/styles.css">
     <link rel="stylesheet" href="/res/site/css/responsive.css">
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
