--- a/views/index.html
+++ b/views/index.html
@@ -2,23 +2,45 @@
   <span class="border border-light"></span>
 
 
-  <form action="<?php echo htmlspecialchars($_SERVER["PHP_SELF"]); ?>" method="post">
+  <form action="/tweet" method="post">
     <div class="form-floating">
     <textarea class="form-control bg-black text-white fs-3 fw-normal" style="height: 100px" class="form-control" id="tweet" name="tweet" value="tweet" placeholder="What's happening" required></textarea>
-    <button type="submit" class="btn btn-primary" name="enviar" id="enviar" value="enviar" action="/register" class="register" method="post">Tweet</button>
+    <button type="submit" class="btn btn-primary" name="enviar" id="enviar" value="enviar">Tweet</button>
   </div>
   </form>
   
-  
   <div class="text-white fs-3 fw-normal bg-dark">
   {loop="$posts"}
+  <div class="border border-light"><h2>{$value.desname}</h2></div>
   <div class="border border-light"><h2>{$value.deslogin}</h2></div>
-  <div class="border border-light"><h2>{$value.tweet}</h2></div>     
+  <div class="border border-light"><h2>{$value.destweet}</h2></div>
   <div class="border border-light"><h2>{$value.dtregister}</h2></div>
+  <br>
   {/loop}
   </div>
 
-
+  <div class="row">
+    <div class="col-md-4"></div>
+    <div class="container">
+       <div class="col-md-4">
+          <div class="panel panel-danger">
+             <div class="panel-heading">
+                <h3 class="panel-title"><i class="fa fa-twitter-square" aria-hidden="true"></i>
+                   Solodev Live
+                </h3>
+             </div>
+             <div class="panel-body">
+              adsjkhasdklasdjkl
+              sdfkljsdfjklsdjkl
+                <a class="twitter-timeline" data-width="100%" href="">Tweets by solodev</a> 
+             </div>
+          </div>
+       </div>
+    </div>
+    <div class="col-md-4">
+    </div>
+ </div>
+ <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
 
 </div>
 
@@ -35,7 +57,7 @@
 
 </div> 
 
-</main>
+</div>
 
 </body>
 </html>
