--- a/views/index.html
+++ b/views/index.html
@@ -1,37 +1,27 @@
-<div class="col-4 d-flex flex-column flex-shrink-0 p-4 bg-dark">
-  <span class="border border-light"></span>
-
-
+<div class="col-4 d-flex flex-column flex-shrink-0 p-4 bg-black">
   <form action="/tweet" method="post">
     <div class="form-floating">
     <textarea class="form-control bg-black text-white fs-3 fw-normal" style="height: 100px" class="form-control" id="tweet" name="tweet" value="tweet" placeholder="What's happening" required></textarea>
     <button type="submit" class="btn btn-primary" name="enviar" id="enviar" value="enviar">Tweet</button>
   </div>
   </form>
-  
-  <div class="text-white fs-3 fw-normal bg-dark">
-  {loop="$posts"}
-  <div class="border border-light"><h2>{$value.desname}</h2></div>
-  <div class="border border-light"><h2>{$value.deslogin}</h2></div>
-  <div class="border border-light"><h2>{$value.destweet}</h2></div>
-  <div class="border border-light"><h2>{$value.dtregister}</h2></div>
-  <br>
+  <div class="text-white fs-3 fw-normal">
+  {loop="$postsall"}
+  <div class="col-12 border border-light">
+    <label class="text-white"><h3>{$value.desname}</h2></label>
+    <label class="text-dark"><h4>@{$value.deslogin}</h3></label>
+    <label class="text-dark"><h5>@{$value.dtregister}</h5></label>
+  </div>
+  <div class="border border-light">
+    <h3>{$value.destweet}</h3>
+  </div>
   {/loop}
   </div>
-
-
 </div>
-
-
-
-
-
 <div class="col-2 d-flex flex-column flex-shrink-0 p-4">
   <span class="border border-light"> Search Twitter</span>
 </div>
-</div>
-
-<div class="col-md-2 d-md-block">
+<div class="col-2">
 
 </div> 
 
