--- a/views/footer.html
+++ b/views/footer.html
@@ -1,3 +1,39 @@
-
+<div class="border border-dark col-2 d-flex flex-column flex-shrink-0 p-4">
+    <div class="col-12">
+    <span> Search Twitter</span>
+  <br>
+  <br>
+  <br>
+    </div>
+    <div class="text-white fs-3 fw-normal">
+      <div class="row g-0 border border-dark">
+        <span> Who to follow</span>
+        {loop="$user"}
+        <div class="col-md-4">
+          <img class="img-responsive" height="75" width="75" id="image-preview" src="{$value.desphoto}" alt="Photo">
+        </div>
+        <div class="col-md-8 text-dark">
+          <h2>{$value.desname}</h2>
+          <h4>@{$value.deslogin}</h4>
+        </div>
+        {/loop}
+        <div class="col-12 text-dark">
+            <a href="/connect_people" class="btn btn-primary" >Show more</a>
+          </div>
+      </div>
+      
+      <br>
+      <br>
+      <br>
+  
+    </div>
+  </div>
+  
+  <div class="col-2 d-flex flex-column flex-shrink-0 p-2">
+  
+  </div> 
+  
+  </div>
+  
 </body>
 </html>
