--- a/views/index.html
+++ b/views/index.html
@@ -7,25 +7,14 @@
   </form>
   <div class="text-white fs-3 fw-normal">
   {loop="$postsall"}
-  <div class="col-12 border border-light">
+  <div class="col-12 border border-dark">
     <label class="text-white"><h3>{$value.desname}</h2></label>
     <label class="text-dark"><h4>@{$value.deslogin}</h3></label>
     <label class="text-dark"><h5>@{$value.dtregister}</h5></label>
   </div>
-  <div class="border border-light">
+  <div class="border border-dark">
     <h3>{$value.destweet}</h3>
   </div>
   {/loop}
   </div>
 </div>
-<div class="col-2 d-flex flex-column flex-shrink-0 p-4">
-  <span class="border border-light"> Search Twitter</span>
-</div>
-<div class="col-2">
-
-</div> 
-
-</div>
-
-</body>
-</html>
