--- a/views/profile.html
+++ b/views/profile.html
@@ -1,8 +1,12 @@
 <div class="col-4 d-flex flex-column flex-shrink-4 p-4">
   <div class="text-white fs-3 fw-normal">
-    <div class="row g-0 border border-light">
-      <div class="col-12">
+    <div class="row g-0 border border-dark">
+      <div class="col-md-10">
+        <img class="img-responsive" height="100" width="100" id="image-preview" src="{$user.desphoto}" alt="Photo">
         <h2>{$user.desname}</h2>
+      </div>
+      <div class="col-md-2">
+        <a href="/profile/update/{function="getUserName()"}" class="btn btn-primary" >Edit Profile</a>
       </div>
       <div class="col-12 text-dark">
         <h4>@{$user.deslogin}</h4>
@@ -28,17 +32,3 @@
     {/loop}
 </div>
 </div>
-
-
-<div class="col-2 d-flex flex-column flex-shrink-0 p-4">
-  <span class="border border-light"> Search Twitter</span>
-</div>
-
-<div class="col-2 d-flex flex-column flex-shrink-0 p-2">
-
-</div> 
-
-</div>
-
-</body>
-</html>
